--- a/settings.gradle
+++ b/settings.gradle
@@ -15,5 +15,6 @@ rootProject.name = "TestStarMod"
 include("mind-core")
 include("mind-multiblock")
 include("mind-tp")
+include("mind-topcompat")
 
 include("mind")
