--- a/mind-core/src/main/resources/META-INF/neoforge.mods.toml
+++ b/mind-core/src/main/resources/META-INF/neoforge.mods.toml
@@ -4,7 +4,7 @@ license = "MIT"
 [[mods]] #mandatory
     modId = "test_star_core" #mandatory
     version = "1.0.2" #mandatory
-    displayName = "Test Star Mod" #mandatory
+    displayName = "Test Star:Item" #mandatory
     authors = "lyuxc" #optional
     description = '''a mod for modpack'''
 
