--- a/mind-tp/build.gradle
+++ b/mind-tp/build.gradle
@@ -19,6 +19,11 @@ dependencies {
 neoForge {
     version = neo_version
 
+    parchment {
+        minecraftVersion = parchment_minecraft_version
+        mappingsVersion = parchment_mappings_version
+    }
+
     runs {
         configureEach {
             logLevel = org.slf4j.event.Level.INFO
