--- a/mind-core/build.gradle
+++ b/mind-core/build.gradle
@@ -13,17 +13,22 @@ sourceSets {
 java.toolchain.languageVersion.set(JavaLanguageVersion.of(21))
 
 dependencies {
-//    compileOnly "curse.maven:mcwifipnp-450250:5317647"
-    compileOnly("mezz.jei:jei-${old_minecraft_version}-common-api:${jei_version}")
-    compileOnly("mezz.jei:jei-${old_minecraft_version}-neoforge-api:${jei_version}")
-    runtimeOnly("mezz.jei:jei-${old_minecraft_version}-neoforge:${jei_version}")
+    compileOnly "curse.maven:mcwifipnp-450250:5646534"
+    runtimeOnly "curse.maven:mcwifipnp-450250:5646534"
+    compileOnly("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
+    compileOnly("mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}")
+    runtimeOnly("mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}")
     runtimeOnly "me.shedaniel.cloth:cloth-config-neoforge:15.0.127"
-
     implementation "software.bernie.geckolib:geckolib-neoforge-${old_minecraft_version}:4.5.7"
 }
 
 neoForge {
     version = neo_version
+
+    parchment {
+        minecraftVersion = parchment_minecraft_version
+        mappingsVersion = parchment_mappings_version
+    }
 
     runs {
         configureEach {
